# dilated-attention-pytorch

./: .codecov.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-bypass.yaml  .pre-commit-config-lenient.yaml  .pre-commit-config.yaml  .ruff-lenient.toml  .ruff.toml  BENCHMARK_UPDATE_SUMMARY.md  CHANGELOG.md  CHANGELOG_hierarchical_removal.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLASH_ATTENTION_3_SETUP.md  INDEX_SELECT_OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PR_DESCRIPTION.md  README.md  REORGANIZATION_SUMMARY.md  RING_ATTENTION_EXPLANATION.md  RING_ATTENTION_IMPLEMENTATIONS.md  RING_PERFORMANCE_ANALYSIS.md  ROADMAP.md  TEST_FIXES_SUMMARY.md  analyze_sparsity.py  apply_hybrid_fix.py  benchmark-multihead.py  benchmark.py  benchmark_all.py  benchmark_all_output.txt  benchmark_hybrid_hilbert_simple.py  benchmark_long_output.txt  benchmark_long_output_fixed.txt  benchmark_results_2024_12_25.txt  benchmark_results_20250707_105654.json  benchmark_sequence_limits.py  billion_token_analysis.py  comprehensive_defect_report.md  (+60 more)
.github/: dependabot.yml  pull_request_template.md
analysis/: analyze_hilbert_overhead.py  billion_token_analysis.py  block_sparse_comparison.py  block_sparse_comparison_simple.py  detailed_memory_analysis.py  encoding_to_generation_workflow.py  final_hilbert_analysis.py  find_256m_token_config.py  h200_improved_dilated_attention_analysis.py  h200_improved_dilated_attention_corrected.py  h200_sequence_length_analysis.py  h200_theoretical_maximum.py  head_parallel_extreme_optimized_results.py  head_parallel_extreme_summary.py  head_parallel_final_summary.py  hilbert_memory_pattern_analysis.py  hilbert_ring_empirical_test.py  implementation_use_cases.py  integration_architecture_analysis.py  kv_compression_possibilities.py  liquid_cfc_ring_optimization_analysis.py  liquid_cfc_router_ring_attention_integration.py  memory_estimation.py  original_code_deep_analysis.py  original_dilated_attention_memory_analysis.py  realizable_vs_speculation_analysis.py  ring_attention_analysis.py  ring_attention_spare_memory_utilization.py  ring_dilation_problem.py  ring_hilbert_theoretical_analysis.py  ring_original_theoretical_performance.py  ring_performance_analysis.py  ring_v2_collective_scaling_analysis.py  simple_comparison.py  trillion_parameter_moe_infrastructure.py  unlimited_gpu_technical_proposal.py
benchmark_results/: extreme_sequences_20250630_095455.json  extreme_sequences_20250630_100531.json  extreme_sequences_20250630_100531.txt  implementation_comparison_20250630_115838.json  implementation_comparison_20250630_115838.txt  implementation_comparison_20250630_120016.txt  implementation_comparison_20250630_120426.json  implementation_comparison_20250630_120529.txt  implementation_comparison_20250630_131455.txt  implementation_comparison_20250630_132113.json  implementation_comparison_20250630_132113.txt  implementation_comparison_20250630_132846.txt  implementation_comparison_20250630_140550.json  implementation_comparison_20250630_140550.txt
benchmarks/: README.md  all_implementations_fp32_2025-07-06-2315-UTC.json  analyze_128k_results.py  analyze_block_sparse_memory.py  analyze_current_implementations.py  analyze_multigpu_performance.py  analyze_post_pattern_scaling.py  analyze_triton_performance.py  benchmark.py  benchmark_adaptive_patterns.py  benchmark_all.py  benchmark_all.py.bak  benchmark_all_block_sparse.py  benchmark_all_dilated_implementations.py  benchmark_all_hilbert_approaches.py  benchmark_all_implementations.py  benchmark_all_optimizations.py  benchmark_all_with_block_sparse.py  benchmark_billion_token_correct.py  benchmark_billion_token_correct.py.bak  benchmark_block_sparse_all.py  benchmark_block_sparse_extreme.py  benchmark_block_sparse_focused.py  benchmark_block_sparse_long_seq.py  benchmark_block_sparse_memory_pool.py  benchmark_block_sparse_optimized.py  benchmark_block_sparse_perf.py  benchmark_block_sparse_post_fix.py  benchmark_block_sparse_ring_attention.py  benchmark_block_sparse_ring_simple.py  benchmark_block_sparse_simple.py  benchmark_block_sparse_summary.py  benchmark_comprehensive.py  benchmark_comprehensive_report.py  benchmark_comprehensive_ring.py  benchmark_core_implementations.py  benchmark_dilated_attention_memory_pool.py  benchmark_dilation_aware_hilbert.py  benchmark_dilation_hilbert_impact.py  benchmark_distributed.py  (+314 more)
dilated_attention_pytorch/: __init__.py  block_sparse_adaptive.py  block_sparse_ring_dilated_attention.py  block_sparse_ring_dilated_attention_v2.py  block_sparse_ring_distributed_dilated_attention.py  block_sparse_ring_multihead_dilated_attention.py  block_sparse_ring_multihead_dilated_attention_v2.py  block_sparse_torch_sparse.py  deprecated_ring_attention.py  dilated_attention.py  distributed_dilated_attention.py  distributed_memory_optimization.py  distributed_sparse_config.py  head_parallel_dilated_attention.py  head_parallel_dilated_attention_optimized.py  improved_dilated_attention.py  improved_dilated_attention_v2.py  improved_distributed_dilated_attention.py  improved_multihead_dilated_attention.py  long_net.py  multihead_dilated_attention.py  ring_advanced_distributed_dilated_attention.py  ring_attention_bucketed.py  ring_attention_correct.py  ring_attention_correct_v2.py  ring_attention_lse.py  ring_attention_lse_optimized.py  ring_attention_utils.py  ring_attention_v2_simple.py  ring_dilated_attention.py  ring_dilated_attention_fixed.py  ring_dilated_attention_hilbert_fixed.py  ring_dilated_attention_hilbert_optimized.py  ring_dilated_attention_hilbert_optimized_fixed.py  ring_dilated_attention_hilbert_optimized_proper.py  ring_dilated_attention_hilbert_refactored.py  ring_dilated_attention_hilbert_v2.py  ring_dilated_attention_hybrid.py  ring_dilated_attention_hybrid_fixed.py  ring_dilated_attention_hybrid_hilbert.py  (+32 more)
doc/: 1t-parameter-training-feasibility-block-sparse-2025.md  1t-parameter-training-feasibility-block-sparse-update.md  1t-parameter-training-feasibility.md  README.md  advanced-distributed-summary.md  benchmark-results-2024.md  core-testing-summary.md  (+17 more)
(+1112 files in other folders)
